--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,11 +1,14 @@
 footer {
-    padding-bottom: 70px;
+    padding-bottom: 50px;
     margin-top: 100px;
     background-image: url(../../assets/images/newsletter-bg.de3317b.png);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
 
+}
+.footer_content{
+    padding-top: 50px;
 }
 
 .footer_block_address .footer_logo {
@@ -39,3 +42,47 @@ footer {
 .footer_item_title {
     color: #fff;
 }
+
+.footer_item {
+    margin-top: 100px;
+}
+
+
+
+
+
+/* responsive css */
+
+@media (max-width: 576px) {
+    .footer_item{
+        text-align: center;
+        
+    }
+    .footer_item_title{
+        margin-top: 25px;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer_item{
+        text-align: center;
+        
+    }
+    .footer_item_title{
+        margin-top: 35px;
+    }
+}
+
+@media (max-width: 992px) {
+    .footer_item{
+        text-align: center;
+        
+    }
+    
+
+    
+}
+
+@media (max-width: 1200px) {}
+
+@media (max-width: 1400px) {}
