--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -41,3 +41,24 @@
 .service_item {
     padding: 0 !important;
 }
+
+
+
+/* responsive css */
+
+@media (max-width: 576px) {
+    #services{
+        padding-top: 0  !important;
+    }
+    
+}
+
+@media (max-width: 768px) {
+    
+}
+
+@media (max-width: 992px) {
+    .service_item:nth-child(3) {
+        width: 100% !important;
+    }    
+}
