--- a/src/components/Solution/solution.css
+++ b/src/components/Solution/solution.css
@@ -1,50 +1,53 @@
-
-
-
 .home_solutions_title {
     font-size: 5rem;
     color: var(--green);
 }
+
 .home_solutions_description {
     font-size: 1.7rem;
     color: var(--light-blue);
     line-height: 2;
 }
 
-.figure-topLeft{
+.figure-topLeft {
     top: 215px;
     left: 0;
 }
-.figure-topRight{
+
+.figure-topRight {
     top: 136px;
     right: 120px;
 }
-.figure-bottomLeft{
+
+.figure-bottomLeft {
     bottom: 3px;
     left: 0;
 }
-.figure-bottomRight{
+
+.figure-bottomRight {
     bottom: 82px;
     right: 120px;
 }
 
-.figures{
+.figures {
     width: 430px;
     height: 550px;
 }
 
-.figure{
+.figure {
     width: 174px;
     height: 174px;
     transition: filter .25s ease-in-out;
     cursor: pointer;
     display: block !important;
+    position: absolute;
 }
 
 
-.figure_content{
+.figure_content {
     width: 600px;
 }
+
 .figure.active,
 .figure:hover {
     filter: brightness(0) saturate(100%) invert(81%) sepia(65%) saturate(447%) hue-rotate(110deg) brightness(99%) contrast(88%);
@@ -52,42 +55,116 @@
 
 
 
-.frame_img{
+.frame_img {
     max-width: 100% !important;
     height: auto !important;
-    
-}
-
-.figure_icon{
-       position: absolute;
-       top: 45%;
-       left: 0;
-       right: 0;
-       margin: 0 auto;
-       transform: translateY(-50%);
-
 
 }
 
-.figure_line{
+.figure_icon {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    transform: translateY(-50%);
+
+
+}
+
+.figure_line {
     position: absolute;
 }
+
 .figure-topLeft .figure_line {
     top: -45px;
     left: 11px;
     transform: rotate(-60deg);
 }
+
 .figure-topRight .figure_line {
     top: -36px;
     right: -2px;
 }
+
 .figure-bottomLeft .figure_line {
     right: 11px;
     bottom: -22px;
     transform: rotate(120deg);
 }
+
 .figure-bottomRight .figure_line {
     right: -30px;
     bottom: 35px;
     transform: rotate(60deg);
 }
+
+
+
+
+/* responsive css */
+
+@media (max-width: 576px) {
+    .figures{
+        margin-right: auto;
+        margin-left: auto;
+        justify-content: center !important;
+        width: 260px !important;
+        
+    }
+    .figure{
+        width: 120px;
+        height: 120px;
+    }
+    .figure_icon{
+        width: 40px;
+    }
+
+    .home_solutions_title{
+        font-size: 4rem;
+        margin-bottom: 15px;
+    }
+    .home_solutions_description{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    
+    .figure_line{
+        display: none;
+    }
+    
+}
+
+@media (max-width: 992px) {
+    
+
+    .figures{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 350px;
+        height: auto;
+        margin-bottom: 50px;
+    }
+    
+    .figure{
+        position: relative !important;
+        top: auto;
+        left: auto;
+        right: auto;
+        bottom: auto;
+        margin: 0;
+    }
+
+    .figure_content{
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 1200px) {}
+
+@media (max-width: 1400px) {}
