--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,10 +1,7 @@
 footer {
     padding-bottom: 50px;
     margin-top: 100px;
-    background-image: url(../../assets/images/newsletter-bg.de3317b.png);
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
+    border-top: 1px solid var(--dark-blue);
 
 }
 .footer_content{
@@ -37,6 +34,10 @@ footer {
 .footer_item .footer_item_link {
     display: block;
     color: var(--light-blue);
+    transition: color .25s ease;
+}
+.footer_item .footer_item_link:hover {
+    color: var(--green);
 }
 
 .footer_item_title {
