--- a/src/components/Posts/posts.css
+++ b/src/components/Posts/posts.css
@@ -17,24 +17,14 @@
     margin-top: 35px;
 
 }
-.post_item::after{
-    content: "";
-    height: 2px;
-    width: 100%;
-    background-color: var(--green);
-    position: absolute;
-    bottom: 0;
-    left: 0;
+.post_link.active{
+    color: var(--green);
 }
 
 .post_item a{
     color: #fff;
     transition: color .25s ease-in-out;
     font-size: 2rem !important;
-}
-
-.post_item a.active{
-    color: var(--green) !important;
 }
 
 .post_item a:hover{
