--- a/src/index.css
+++ b/src/index.css
@@ -55,15 +55,18 @@ ul{
 /*section title*/
 
 .section_title {
+  text-align: center;
   font-size: 4rem;
   color: #fff;
+  width: 100%;
   margin: 3rem 0;
 }
 
 .section_title::after {
   display: block;
   margin-top: 1.5rem;
-  width: 20rem;
+  width: 10%;
+  margin:  10px auto;
   height: .3rem;
   background: var(--green);
   content: "";
