--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,7 @@
 header{
-    background-image: url(../../assets/images/hero-bg.jpg);
+    background-image: url(../../assets/images/bg5.jpg);
     height: 100vh;
-    background-position: center;
+    background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
 }
