--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ ul {
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  border: 1px solid var(--dark-blue);
+  border: 2px solid var(--light-blue);
   transition: all .35s;
 }
 
