--- a/src/components/Clients/clients.css
+++ b/src/components/Clients/clients.css
@@ -1,13 +1,17 @@
 #clients {
     padding: 5rem 0;
+    
 }
 
 
 
 .client_item img {
-    width: 100%;
-    height: 150px;
-    padding: 1rem;
-    border-radius: 2rem;
-    opacity: .9;
+    filter: brightness(100%) contrast(0%) !important;
+    margin: 0 auto;
+    
+    
+}
+
+.client_item{
+    margin: 15px 0;
 }
